--- a/Merge_Videos.ipynb
+++ b/Merge_Videos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "37c61293-daf1-42d5-a94f-417e60160926",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moviepy - Building video C:\\Users\\Home\\Desktop\\Vij\\Madhulika_Final.mp4.\n",
-      "MoviePy - Writing audio in Madhulika_FinalTEMP_MPY_wvf_snd.mp3\n"
+      "Moviepy - Building video C:\\Users\\Home\\Desktop\\Vij\\Nani_Final.mp4.\n",
+      "MoviePy - Writing audio in Nani_FinalTEMP_MPY_wvf_snd.mp3\n"
      ]
     },
     {
@@ -26,7 +26,7 @@
      "output_type": "stream",
      "text": [
       "MoviePy - Done.\n",
-      "Moviepy - Writing video C:\\Users\\Home\\Desktop\\Vij\\Madhulika_Final.mp4\n",
+      "Moviepy - Writing video C:\\Users\\Home\\Desktop\\Vij\\Nani_Final.mp4\n",
       "\n"
      ]
     },
@@ -42,8 +42,8 @@
      "output_type": "stream",
      "text": [
       "Moviepy - Done !\n",
-      "Moviepy - video ready C:\\Users\\Home\\Desktop\\Vij\\Madhulika_Final.mp4\n",
-      "Videos merged successfully! Output saved as: C:\\Users\\Home\\Desktop\\Vij\\Madhulika_Final.mp4\n"
+      "Moviepy - video ready C:\\Users\\Home\\Desktop\\Vij\\Nani_Final.mp4\n",
+      "Videos merged successfully! Output saved as: C:\\Users\\Home\\Desktop\\Vij\\Nani_Final.mp4\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
     "from moviepy.editor import VideoFileClip, concatenate_videoclips\n",
     "\n",
     "# Specify the paths to your video files\n",
-    "video1_path = \"C:\\\\Users\\\\Home\\\\Desktop\\\\Vij\\\\Videos\\\\Initial Videos\\\\Madhulika.mp4\"\n",
+    "video1_path = \"C:\\\\Users\\\\Home\\\\Desktop\\\\Vij\\\\Videos\\\\Initial Videos\\\\Nani.mp4\"\n",
     "video2_path = \"C:\\\\Users\\\\Home\\\\Desktop\\\\Vij\\\\Videos\\\\End.mp4\"\n",
     "\n",
     "# Load the video clips\n",
@@ -62,7 +62,7 @@
     "final_clip = concatenate_videoclips([clip1, clip2])\n",
     "\n",
     "# Save the merged video\n",
-    "output_path = \"C:\\\\Users\\\\Home\\\\Desktop\\\\Vij\\\\Madhulika_Final.mp4\"\n",
+    "output_path = \"C:\\\\Users\\\\Home\\\\Desktop\\\\Vij\\\\Nani_Final.mp4\"\n",
     "final_clip.write_videofile(output_path)\n",
     "\n",
     "# Print success message\n",
